Pinned Filters // Prevent overlap with x

--- a/ui/v2.5/src/components/List/styles.scss
+++ b/ui/v2.5/src/components/List/styles.scss
@@ -198,7 +198,7 @@ input[type="range"].zoom-slider {
 
 .pinIcon {
   position: absolute;
-  right: 5%;
+  right: 15%;
 }
 
 .tilted {
